--- a/docs/releasenotes/0.23.md
+++ b/docs/releasenotes/0.23.md
@@ -1,7 +1,8 @@
 # actions-runner-controller v0.23.0
 
-https://github.com/actions-runner-controller/actions-runner-controller/milestone/3
+All changes in this release can be found in the milestone https://github.com/actions-runner-controller/actions-runner-controller/milestone/3
 
+This log documents breaking and major enhancements
 # BREAKING CHANGE : Workflow job webhooks require an explicit field set
 
 Previously the webhook event workflow job was set as the default if no `githubEvent` was set.
