--- a/docs/releasenotes/0.23.md
+++ b/docs/releasenotes/0.23.md
@@ -3,7 +3,7 @@
 All changes in this release can be found in the milestone https://github.com/actions-runner-controller/actions-runner-controller/milestone/3
 
 This log documents breaking and major enhancements
-# BREAKING CHANGE : Workflow job webhooks require an explicit field set
+## BREAKING CHANGE : Workflow job webhooks require an explicit field set
 
 Previously the webhook event workflow job was set as the default if no `githubEvent` was set.
 
@@ -26,7 +26,7 @@ To this:
     duration: "30m"
 ```
 
-# BREAKING CHANGE : topologySpreadConstraints renamed to topologySpreadConstraint
+## BREAKING CHANGE : topologySpreadConstraints renamed to topologySpreadConstraint
 
 Previously to use the pod `topologySpreadConstraint:` attribute in your runners you had to set `topologySpreadConstraints:` instead, this was a typo and has been corrected.
 
@@ -34,14 +34,15 @@ Previously to use the pod `topologySpreadConstraint:` attribute in your runners 
 
 Update your runners to use `topologySpreadConstraints:` instead
 
-# BREAKING CHANGE : Default sync period is now 1 minute instead of 10 minutes
+## BREAKING CHANGE : Default sync period is now 1 minute instead of 10 minutes
 
 Since caching as been implemented the default sync period of 10 minutes is unnecessarily conservative and gives a poor out of the box user experience. If you need a 10 minute sync period ensure you explicitly set this value.
 
 **Migration Steps**
 
 Update your sync period, how this is done will depend on how you've deployed ARC.
-# BREAKING CHANGE : A metric is set by default
+
+## BREAKING CHANGE : A metric is set by default
 
 Previously if no metric was provided and you were using pull based scaling the `TotalNumberOfQueuedAndInProgressWorkflowRuns` was metric applied. No default is set now.
 
