docs: add new runner group API enhancemnet

--- a/docs/releasenotes/0.23.md
+++ b/docs/releasenotes/0.23.md
@@ -79,3 +79,11 @@ spec:
     - owner/my-awesome-repo-2
     - owner/my-awesome-repo-3
 ```
+
+## ENHANCEMENT : Find runner groups that visible to repository using a single API call
+
+GitHub has contributed code to utilise a new API to enable us to get a repositories runner groups with a single API call. This enables us to scale runners based on the requesting repositories runner group membership without a series of expensive API queries.
+
+This is an opt-in feature currently as it's a significant change in behaviour if enabled, additionally, whilst scaling based on the repositories runner group membership is supported in both GHES and github.com, only github.com currently has access to the new raate-limit budget friendly API.
+
+To enable this set deploy via Helm and set `githubWebhookServer.useRunnerGroupsVisibility` to `true`.
